k8s/k8s-account.yml
apiVersion: v1
kind: Service
metadata:
  name: epk-account-service
spec:
  selector:
    app: epk-account-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: epk-account-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epk-account-app
  template:
    metadata:
      labels:
        app: epk-account-app
    spec:
      containers:
        - name: epk-account-app
          image: 333675123754.dkr.ecr.us-east-1.amazonaws.com/kwojcikowski:epk-account-app
          ports:
            - containerPort: 8081
