k8s/k8s-controller.yml
apiVersion: v1
kind: Service
metadata:
  name: controller-app
spec:
  selector:
    app: epk-controller-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: epk-controller-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epk-controller-app
  template:
    metadata:
      labels:
        app: epk-controller-app
    spec:
      containers:
        - name: epk-passenger-app
          image: 333675123754.dkr.ecr.us-east-1.amazonaws.com/kwojcikowski:epk-controller-app
          ports:
            - containerPort: 80
