k8s/k8s-discovery.yml
apiVersion: v1
kind: Service
metadata:
  name: epk-discovery-service
spec:
  selector:
    app: epk-discovery-app
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: epk-discovery-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epk-discovery-app
  template:
    metadata:
      labels:
        app: epk-discovery-app
    spec:
      containers:
        - name: epk-discovery-app
          image: 333675123754.dkr.ecr.us-east-1.amazonaws.com/kwojcikowski:epk-discovery-app
          ports:
            - containerPort: 8761
