k8s/k8s-ticket.yml
apiVersion: v1
kind: Service
metadata:
  name: epk-ticket-service
spec:
  selector:
    app: epk-tickets-app
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: epk-ticket-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epk-ticket-app
  template:
    metadata:
      labels:
        app: epk-ticket-app
    spec:
      containers:
        - name: epk-ticket-app
          image: 333675123754.dkr.ecr.us-east-1.amazonaws.com/kwojcikowski:epk-ticket-app
          ports:
            - containerPort: 8082
